k8s/plutohub-user-template.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pluto-user
  namespace: plutohub
  labels:
    app: plutohub-user
    # user: "{username}"
spec:
  containers:
  - name: pluto-container
    image: pluto:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 8080
    resources:
      limits:
        cpu: "1"
        memory: "2Gi"
      requests:
        cpu: "0.1"
        memory: "256Mi"
    volumeMounts:
    - name: user-home
      mountPath: /home/pluto/users/ #{username}
  volumes:
  - name: user-home
    persistentVolumeClaim:
      claimName: pluto-home
  restartPolicy: Never
