k8s/pluto-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pluto-deployment
  namespace: plutohub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pluto-notebook
  template:
    metadata:
      labels:
        app: pluto-notebook
    spec:
      serviceAccountName: geniehub-hub  # Add this line
      containers:
      - name: pluto
        image: pluto:latest
        imagePullPolicy: Never  # For local development
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            cpu: "200m"
            memory: "512Mi"
        volumeMounts:
        - name: notebooks
          mountPath: /home/pluto/notebooks
      volumes:
      - name: notebooks
        persistentVolumeClaim:
          claimName: pluto-notebooks-data
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: pluto-service
  namespace: plutohub
spec:
  selector:
    app: pluto-notebook
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30081  # External access port
  type: NodePort
